# essentia-rs

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  publish.yml  validate.yml
.github/workflows/actions/: publish.yml
doc/: APPARATA.md  BASICS.md  REACTIONS.md
src/: lib.rs
src/abstractions/: environment.rs  essence.rs  form.rs  mod.rs  quantity.rs  reaction.rs  substance.rs
src/abstractions/env/: energy.rs  environment.rs  mod.rs  time.rs
src/abstractions/physics/: energy.rs  heat.rs  heat_exchange.rs  mod.rs  phase_graph.rs  power.rs  quantity.rs  solubility.rs  temperature.rs  time.rs
src/engine/: engine.rs  essentia.rs  mod.rs  reaction_context.rs
src/engine/builtin_reactions/: dissolution.rs  form_transition.rs  mod.rs  precipitation.rs  solution.rs
src/engine/essentia/: builder.rs  querying.rs  reactions.rs  registrations.rs  simulation.rs
src/utils/: builder.rs  either.rs  mod.rs
tests/: buitins.rs  simple.rs  tests.rs
tests/data/: essence.rs  form.rs  mod.rs  reaction.rs
tests/data/reactions/: cryo_chill.rs  mod.rs  pyro_heat.rs
