[package]
name = "essentia-rs"
description = "Alchemical Simulation Engine loosely inspired by the real world."
homepage = "https://essentia.irrelephant.io"
repository = "https://github.com/irrelephant-io/essentia-rs"
readme = "README.md"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = [ "gamedev", "engine" ]
exclude = [ ".github/", ".vscode/" ]

[dependencies]
